# SwissGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  apply_refactor.ps1  buildCommands.TXT  install_ubuntu.txt
resources/: manifest.json
src/: Main.cpp
src/core/: EventBus.hpp
src/events/: GameEvents.hpp  InputEvents.hpp
src/graphics/: Color.hpp  DrawLayer.hpp  DrawList.hpp  Drawable.hpp  Graphics.hpp  Label.cpp  Label.hpp  Point.hpp  Rect.cpp  Rect.hpp  Sprite.cpp  Sprite.hpp  Window.hpp
src/graphics/resources/: Font.cpp  Font.hpp  FontRss.hpp  Image.cpp  Image.hpp  ImageRss.hpp  ResourceLoader.cpp  ResourceLoader.hpp
src/input/: TouchData.hpp
src/model/: BettingField.cpp  BettingField.hpp  BettingTable.cpp  BettingTable.hpp  Chip.cpp  Chip.hpp  GameResources.hpp  GameState.hpp
src/model/betting_field/: BettingField.cpp  BettingField.hpp  BettingFieldResources.hpp
src/model/betting_table/: BettingTable.cpp  BettingTable.hpp  BettingTableResources.hpp
src/model/chip/: Chip.cpp  Chip.hpp  ChipResources.hpp
src/model/game_state/: GameState.hpp
src/platform/sfml/: SfmlInputBridge.cpp  SfmlInputBridge.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp  SfmlResourceManager.cpp  SfmlResourceManager.hpp  SfmlResourceResolver.cpp  SfmlResourceResolver.hpp  SfmlWindow.cpp  SfmlWindow.hpp
src/systems/: BettingSystem.cpp  BettingSystem.hpp  InputSystem.cpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/ui/: GameResources.hpp
src/ui/betting_field/: BettingFieldView.cpp  BettingFieldView.hpp
src/ui/betting_table/: BettingTableView.cpp  BettingTableView.hpp
src/ui/chip/: ChipView.cpp  ChipView.hpp
